@@ -1,34 +1,0 @@
-[domain/<%= @title %>]
-# sssd::provider::krb5
-<% if @debug_level -%>
-debug_level = <%= @debug_level %>
-<% end -%>
-debug_timestamps = <%= @debug_timestamps.to_s %>
-debug_microseconds = <%= @debug_microseconds.to_s %>
-krb5_server = <%= @krb5_server %>
-krb5_realm = <%= @krb5_realm %>
-<% if @krb5_kpasswd -%>
-krb5_kpasswd = <%= @krb5_kpasswd %>
-<% end -%>
-<% if @krb5_ccachedir -%>
-krb5_ccachedir = <%= @krb5_ccachedir %>
-<% end -%>
-<% if @krb5_ccname_template -%>
-krb5_ccname_template = <%= @krb5_ccname_template %>
-<% end -%>
-krb5_auth_timeout = <%= @krb5_auth_timeout.to_s %>
-krb5_validate = <%= @krb5_validate.to_s %>
-<% if @krb5_keytab -%>
-krb5_keytab = <%= @krb5_keytab %>
-<% end -%>
-krb5_store_password_if_offline = <%= @krb5_store_password_if_offline.to_s %>
-<% if @krb5_renewable_lifetime -%>
-krb5_renewable_lifetime = <%= @krb5_renewable_lifetime %>
-<% end -%>
-<% if @krb5_lifetime -%>
-krb5_lifetime = <%= @krb5_lifetime %>
-<% end -%>
-krb5_renew_interval = <%= @krb5_renew_interval.to_s %>
-<% if @krb5_use_fast -%>
-krb5_use_fast = <%= @krb_use_fast %>
-<% end -%>
